lilv (0.24.17) unstable; urgency=medium

  * Allow programs to be used from subproject

 -- David Robillard <d@drobilla.net>  Tue, 09 Aug 2022 13:44:56 +0000

lilv (0.24.16) stable; urgency=medium

  * Fix fallback flock() detection on MacOS
  * Switch to meson build system

 -- David Robillard <d@drobilla.net>  Tue, 19 Jul 2022 01:16:26 +0000

lilv (0.24.14) stable; urgency=medium

  * Fix build issues with newer toolchains
  * Fix unused parameter warnings
  * Update zix tree

 -- David Robillard <d@drobilla.net>  Fri, 27 May 2022 01:38:26 +0000

lilv (0.24.12) stable; urgency=medium

  * Allow connecting ports to structures in Python
  * Fix potential memory error when joining filesystem paths
  * Fix saving state with files on Windows
  * Fix unlikely undefined behavior when saving state
  * Fix writing state manifests on Windows
  * Remove the need for a generated configuration header

 -- David Robillard <d@drobilla.net>  Thu, 07 Jan 2021 21:46:06 +0000

lilv (0.24.10) stable; urgency=medium

  * Fix memory leaks in lv2bench
  * Fix various minor warnings and other code quality issues
  * Make lilv_world_get() use translations
  * Split and clean up test suite

 -- David Robillard <d@drobilla.net>  Sun, 27 Sep 2020 12:17:02 +0000

lilv (0.24.8) stable; urgency=medium

  * Allow passing strings for URIs in Python API when unambiguous
  * Fix cases where incorrect translation is used
  * Fix deleting state bundles loaded from the model
  * Fix memory leak when dyn-manifest has no plugins (thanks Michael Fisher)
  * Implement state:freePath feature

 -- David Robillard <d@drobilla.net>  Sun, 26 Apr 2020 15:55:26 +0000

lilv (0.24.6) stable; urgency=medium

  * Add more strict error detection when storing plugin state properties
  * Add option to override LV2_PATH in applications
  * Don't print errors when saving state if correct links already exist
  * Fix GCC8 warnings
  * Fix creating directories across drives on Windows