@@ -1,8 +1,9 @@
 lilv (0.24.17) unstable; urgency=medium
 
   * Allow programs to be used from subproject
+  * Fix default LV2_PATH
 
- -- David Robillard <d@drobilla.net>  Tue, 09 Aug 2022 13:44:56 +0000
+ -- David Robillard <d@drobilla.net>  Tue, 09 Aug 2022 13:46:15 +0000
 
 lilv (0.24.16) stable; urgency=medium
 
